--- a/style.css
+++ b/style.css
@@ -6,49 +6,54 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 .cabecalho {
-    background-color: #424E61;
-    color: white;
+    background-color: #82cabb;
+    color: rgb(255, 255, 255);
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 24px 0;
+    padding: 0px 0;
 }
 
 .cabecalho-imagem{
-    width: 10%;
+    width: 25%;
 }
 
 .cabecalho-lista-item{
     display: inline-block;
-    margin: 0 16px;
-    font-size: 16px;
+    margin: 0 50px;
+    font-size: 10px;
 }
 
 .cabecalho-lista-item a{
     text-decoration: none; 
-    color: white;
+    color: rgb(0, 0, 0);
 }
 
 .escola-imagem{
-    width: 25%;
+    width: 10%;
+    margin: 0 80px;
+    font-size: 20px;
 }
 
 #escola{
-    background-image: linear-gradient(#424E61,#16CFF8);
+    background-image: linear-gradient(#82cabb,#82cabb);
     color:white;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 24px 0;
+    justify-content: left;
+    text-align: center;
+    padding: 90px 0;
+    font-family: ui-sans-serif;
+    flex-direction: row-reverse;
+    font-size: 20px;
 }
 
 .escola-div-conteudo{
-    width: 35%;
+    width: 50%;
 }
 
 
 .escola-titulo{
-    padding: 24px 0;
+    padding: 20px 0;
 }
 
 #estudante{
@@ -57,7 +62,7 @@ body {
 
 
 .estudante-imagem{
-    width: 120px;
+    width: 250px;
 }
 
 .estudante-icone{
@@ -67,12 +72,12 @@ body {
 
 .estudante-div{
     text-align: center;
-    padding: 16px 0;
+    padding: 90px 0;
 }
 
 .estudante-titulo{
     text-align: center;
-    padding: 50px 0;
+    padding: 90px 0;
 }
 
 .estudante-todos{
@@ -81,12 +86,14 @@ body {
 }
 
 .rodape{
-    background-color: black;
+    background-color: #699ea3;
     text-align: center;
+    padding: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .rodape-imagem{
-    height: 60px;
-    padding: 12px 0;
+    height: 50px;
+    padding:60px 0;
    
 }
